--- a/templates/base.html
+++ b/templates/base.html
@@ -310,7 +310,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
-                <i class="fas fa-inbox"></i> NEXUS INQUIRY SYSTEM
+                <i class="fas fa-inbox"></i> PAMANGKOT INQUIRY SYSTEM
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -348,7 +348,7 @@
     </main>
 
     <footer class="mt-auto">
-        <p>&copy; 2026 NEXUS Inquiry Management System. All rights reserved.</p>
+        <p>&copy; 2026 PAMANGKOT Inquiry Management System. All rights reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
